2006-09-25  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDBCallback.py: catch db transaction problem
	* src/GrampsCfg.py: reset PORT_WARN when TRANSACTION re-enabled
	* src/QuestionDialog.py: sync changes to config value
	* src/GrampsLogger/_ErrorReportAssistant.py: fix typo
	
2006-09-24  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: fix call to warning dialog
	* src/QuestionDialog.py: Don't do internal check on value

2006-09-24  Brian Matherly  <brian@gramps-project.org>
    * src/plugins/AncestorReport.py: Fix generation numbers.
    * src/_ErrorReportAssistant.py: Fix email client launch (#455)

2006-09-23  Don Allingham  <don@gramps-project.org>
	* src/images/sources.svg: new icon
	* src/images/reports.svg: new icon
	* src/images/tools.svg: new icon
	* src/images/events.svg: new icon
	* src/images/place.svg: new icon
	* src/images/tools.svg: new icon
	* src/ViewManager.py: use new icons
	* src/gramps_main.py: register new icons

2006-09-22  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsGEDDB.py: support for disabling transactions
	* src/GrampsDb/_GrampsXMLDB.py: support for disabling transactions
	* src/GrampsDb/_GrampsBSDDB.py: support for disabling transactions
	* src/GrampsDb/_GrampsDbBase.py: support for disabling transactions
	* src/GrampsDb/_ReadGedcom.py: check for IO Eror
	* src/ViewManager.py: display message if a portability problem is 
	detected
	* src/QuestionDialog.py: Add Warning dialog that can be disabled
	* src/DbLoader.py: Detect missing database problem
	* src/ArgHandler.py: support for disabling transactions
	* src/GrampsCfg.py: new config keys for transactions
	* src/Config/_GrampsConfigKeys.py: new config keys for transactions

2006-09-17  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: handle missing database on autoload (#447)
	* src/ArgHandler.py: handle missing database on autoload (#447)
	* src/DbLoader.py: handle missing database on autoload (#447)