@@ -1,4 +1,8 @@
 2006-09-25  Don Allingham  <don@gramps-project.org>
+	* src/ViewManager.py: fix message
+	* src/Config/_GrampsConfigKeys.py: set default value
+	* src/QuestionDialog.py: set value from config
+	* data/gramps.schemas.in: fix default value
 	* src/GrampsDb/_GrampsDBCallback.py: catch db transaction problem
 	* src/GrampsCfg.py: reset PORT_WARN when TRANSACTION re-enabled
 	* src/QuestionDialog.py: sync changes to config value
